--- a/Test1.html
+++ b/Test1.html
@@ -3,79 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>Erin Murray</title>
-</head>
-<style>
+
+   <link rel="stylesheet" href="mycss_tablet.css">
+    <link rel="stylesheet" href="mycss_web.css" >
+    <style>
     .myDIV{
-    text-align: left:
+    text-align:left;
     }
 </style>
+    <style>
+        h1{color:#355E3B;background-color:#B9D9EB;text-align: center;}
+    </style>
+
+</head>
 <body>
 <div class="myDIV">
 
 <h1>
     Profile
 </h1>
-<p>
-    <span style="color:red"> Hello. My name is Erin Murray.
+    <p class="screen-only"> <span style="color:#002D62"> Hello. My name is Erin Murray.
     I am an information technology major with minors in Italian and Social Justice.
     I am originally from Annapolis, MD and I have two dogs.</span>
 </p>
     <img src="https://image.shutterstock.com/image-vector/avatar-blond-female-business-suit-600w-1543744703.jpg" width ="250" height="300"/>
-<b>
+<p>
+
+</p>
+    <b class="blue-background">
     EDUCATION
 </b>
-    <p>
+    <p id="heading">
    I graduated from Old Mill HS in 2018 with my high school diploma and my International Baccalaureate diploma.
-    I will graduate from St.John's Spring 2022.
+    I will graduate from St. John's Spring 2022.
 </p>
- <b>
+    <b class="blue-background">
      WORK EXPERIENCE
- </b>
-   <p> <ul>
+    </b>
+   <p>
+    <ul class="list-color">
         <li> Asst. Manager at Chick-fil-a </li>
         <li> Volunteer</li>
         <li>Regina's Pizzeria </li>
         <li> Independent Research </li>
-    </ul>
+         </ul>
 
-    <b>
+
+    <b class="blue-background">
         PROGRAMMING LANGUAGES
     </b>
-    <ul>
-    <li> Java: 3 semesters of instruction</li>
-    <li> SQL: 1 semester of instruction</li>
-</ul>
-<b>GENERAL INTERESTS</b>
-    <p>
-        I love to bake and spend time with my dogs. I also enjoy reading and watching old movies. I particularly love watching old Italian movies.
+        <ul class="list-color">
+            <li> Java: 3 semesters of instruction</li>
+            <li> SQL: 1 semester of instruction</li>
+        </ul>
+
+    <b class="blue-background"> GENERAL INTERESTS</b>
+   <p id="paragraph">
+    I love to bake and spend time with my dogs. I also enjoy reading and watching old movies. I particularly love watching old Italian movies.
     </p>
 
-<b>
+<b class="blue-background">
     FAVORITE SONG, FILM & TV SHOW
        </b>
-    <ul>
+    <ul id="lists">
         <li> <a href="https://www.youtube.com/watch?v=iS88CRDMA8E">My Favorite Song</a> </li>
         <li> <a href="https://www.youtube.com/watch?v=mFl8nzZuExE">My Favorite Film</a></li>
         <li><a href="https://www.youtube.com/watch?v=N_gsv1A_IXQ">My Favorite TV Show</a> </li>
         </ul>
 
-    <b>FAVORITE WEBSITE</b>
-       <p>
+    <b class="blue-background">
+        FAVORITE WEBSITE</b>
+       <p class="list-color">
            I love to shop but, I do have a budget. If you think you know where I shop <a href="https://www.kohls.com/">Click Here</a>
        </p>
 </div>
 <h2>
     Menu Section
 </h2>
+<div class="myDIVTwo">
 <form>
     <input placeholder="Type Project Name"/>
     <input type="submit"/>
-
-</form>
-
+    </form>
+</div>
 <h3>
     My Projects
 </h3>
+<div class="myDIVTwo">
 <table class="center">
     <tr>
         <th>Project Name</th>
@@ -89,6 +103,14 @@
         <td>Learn basics of HTML</td>
         <td><a href="https://rkileaders.teachable.com/courses/764038/lectures/13897368">Here</a></td>
     </tr>
+    <tr>
+        <td>Milestone Two</td>
+        <td>Sept 16</td>
+        <td>Use CSS to style HTML page</td>
+        <td><a href="https://rkileaders.teachable.com/courses/764038/lectures/14006347">Here</a></td>
+    </tr>
+
 </table>
+</div>
 </body>
 </html>
