--- a/Test1.html
+++ b/Test1.html
@@ -26,7 +26,7 @@
     I am an information technology major with minors in Italian and Social Justice.
     I am originally from Annapolis, MD and I have two dogs.</span>
 </p>
-    <img src="https://image.shutterstock.com/image-vector/avatar-blond-female-business-suit-600w-1543744703.jpg"/>
+    <img src="https://image.shutterstock.com/image-vector/avatar-blond-female-business-suit-600w-1543744703.jpg" width ="250" height="300"/>
 <p>
 
 </p>
