--- a/MilestoneThree.html
+++ b/MilestoneThree.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Erin Murray</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="C:\Users\ErinM\IdeaProjects\MilestoneOne\mycss_tablet.css" rel="stylesheet" >
-    <link href="C:\Users\ErinM\IdeaProjects\MilestoneOne\mycss_tablet.css" rel="stylesheet" >
+    <link href="mycss_tablet.css" rel="stylesheet" >
+    <link href="mycss_tablet.css" rel="stylesheet" >
 
     <style>
     .myDIV{
