--- a/MilestoneThree.html
+++ b/MilestoneThree.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Erin Murray</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-   <link rel="stylesheet" href="mycss_tablet.css">
-    <link rel="stylesheet" href="mycss_web.css" >
+   <link rel="stylesheet" href="https://github.com/ErinM663/Repository/blob/15eaf25a69445773ee688ac7ca626a6c2a73c65d/mycss_tablet.css">
+    <link rel="stylesheet" href="https://github.com/ErinM663/Repository/blob/15eaf25a69445773ee688ac7ca626a6c2a73c65d/mycss_web.css" >
 
     <style>
     .myDIV{
@@ -119,6 +119,12 @@
             <td>Sept 16</td>
             <td>Use CSS to style HTML page</td>
             <td><a href="https://rkileaders.teachable.com/courses/764038/lectures/14006347">Here</a></td>
+        </tr>
+         <tr>
+            <td>Milestone Three</td>
+            <td>Sept 23</td>
+            <td>Use Boostraps to style HTML page</td>
+            <td><a href="https://rkileaders.teachable.com/courses/764038/lectures/14031438">Here</a></td>
         </tr>
 
     </table>
