--- a/MilestoneThree.html
+++ b/MilestoneThree.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Erin Murray</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-   <link rel="stylesheet" href="https://github.com/ErinM663/Repository/blob/15eaf25a69445773ee688ac7ca626a6c2a73c65d/mycss_tablet.css">
-    <link rel="stylesheet" href="https://github.com/ErinM663/Repository/blob/15eaf25a69445773ee688ac7ca626a6c2a73c65d/mycss_web.css" >
+   <link rel="stylesheet" href="mycss_tablet.css">
+    <link rel="stylesheet" href="mycss_web.css" >
 
     <style>
     .myDIV{
