--- a/Project3.html
+++ b/Project3.html
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
 
-    <title>Questionnaire For CS</title>
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+
+
 
     <link rel="stylesheet" href="Project3.css">
     <script src="Project3.js"> </script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
         <a class="navbar-brand" href="#">CS Questionnaire</a>
+        <div id="timeBox">
+            <span class="toBold">Time Elapsed:</span><br>
+            <label id="minutes">00</label>:<label id="seconds">00</label>
+        </div>
     </div>
 </nav>
 
@@ -31,8 +36,11 @@
         <div class="row">
             <div class="col">
                 <div>
-                    <span> Press start to begin the app</span>
-                    <button class="btn btn-danger float-right" data-action="{{this.action}}">{{this.action}}</button>
+                    <span> Select quiz to start the app</span>
+                    <div class="buttons">
+                    <button class="btn btn-danger float-right" data-action="{{this.action}}">Quiz 1</button>
+                    <button class="btn btn-danger float-right" data-action="{{this.action2}}">Quiz 2</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -41,6 +49,11 @@
 
 <script id="question_view_true_false" type="text/x-handlebars-template">
     <div class="container">
+        <div class="counter">
+            <div class="col">
+                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div>
@@ -55,6 +68,11 @@
 
 <script id="question_view_text_input" type="text/x-handlebars-template">
     <div class="container">
+        <div class="counter">
+            <div class="col">
+                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div>
@@ -66,19 +84,95 @@
         </div>
     </div>
 </script>
-
-<script id="feedback_view" type="text/x-handlebars-template">
+<script id="question_view_multiple" type="text/x-handlebars-template">
+<div class="container">
+    <div class="counter">
+        <div class="col">
+            <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div>
+                <span style="text-align:center"> {{this.questionText}}</span>
+                <input type="radio" id="{{this.options.[0]}}" data-action="answer" data-answer="{{this.options.[0]}}" value="{{this.options.[0]}}" name="selection">{{this.options.[0]}}<br>
+                <input type="radio"id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="selection">{{this.options.[1]}}<br>
+                <input type="radio" id="{{this.options.[2]}}" data-action="answer" data-answer="{{this.options.[2]}}" value="{{this.options.[2]}}" name="selection">{{this.options.[2]}}<br>
+                <input type="radio" id="{{this.options.[3]}}" data-action="answer" data-answer="{{this.options.[3]}}" value="{{this.options.[3]}}" name="selection">{{this.options.[3]}}<br>
+               </div>
+            <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+        </div>
+    </div>
+</div>
+</script>
+<script id="question_view_multi_input" type="text/x-handlebars-template">
     <div class="container">
+        <div class="scoreRow">
+            <div class="col">
+                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+            </div>
+        </div>
         <div class="row">
-               <div class="col">
-                     <div>
-                        <span id="feedback_string">Correct | Incorrect </span>
-                        <button class="btn btn-danger float-right" data-action="ok"> OK</button>
-                     </div>
+            <div class="col">
+                <div>
+                    <span style="text-align:center">{{this.questionTextBefore}}</span>
+                    <input type="text" id="{{this.answerField1}}" name="answer">
+                    <span style="text-align:center">{{this.questionTextBetween}}</span>
+                    <input type="text" id="{{this.answerField2}}" name="answer">
+                    <span style="text-align:center">{{this.questionTextAfter}}</span><br>
+
+                    <button class="btn btn-danger float-right" data-action="submit">Submit</button>
                 </div>
             </div>
         </div>
-    </script>
+    </div>
+</script>
+<script id="question_view_check" type="text/x-handlebars-template">
+    <div class="container">
+        <div class="scoreRow">
+            <div class="col">
+                <p>Questions Answered: <span id="questionsAnswered"></span> || Current Score: <span id="currentScore"></span>%</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div>
+                    <span style="text-align:center">{{this.questionText}} </span><br>
+                    <div class="leftAlignChoices">
+                        <input type="checkbox" id="{{this.options.[0]}}" data-action="answer" data-answer="{{this.options.[0]}}" value="{{this.options.[0]}}" name="box">{{this.options.[0]}}<br>
+                        <input type="checkbox" id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="box">{{this.options.[1]}}<br>
+                        <input type="checkbox" id="{{this.options.[2]}}" data-action="answer" data-answer="{{this.options.[2]}}" value="{{this.options.[2]}}" name="box">{{this.options.[2]}}<br>
+                        <input type="checkbox" id="{{this.options.[3]}}" data-action="answer" data-answer="{{this.options.[3]}}" value="{{this.options.[3]}}" name="box">{{this.options.[3]}}<br>
+                    </div>
+                    <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+<script id="feedback_positive" type="text/x-handlebars-template">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <span id="feedback_string">Great Job!</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<script id="feedback_negative" type="text/x-handlebars-template">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <span id="feedback_string">Try Again Next Time</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
 
 <script id="end_view" type="text/x-handlebars-template">
     <div class="container">
@@ -86,7 +180,13 @@
             <div class="col">
                 <div>
                     <span> Thank you for taking the quiz</span>
-                    /* <span> Your Test Score was {{this.current_percentage}}</span> */
+                     <span> Your Test Score was {{this.current_percentage}}</span>
+                    <div class="buttons">
+
+                        <button class="btn btn-danger float-right" data-action="start_again">Return to start</button>
+
+                    </div>
+
                     <button class="btn btn-danger float-right" data-action="start_again">Start Again</button>
                 </div>
             </div>
@@ -94,3 +194,4 @@
     </div>
 </script>
 </html>
+
