--- a/Project3.html
+++ b/Project3.html
@@ -1,197 +1,210 @@
 <html>
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <!--BOOTSTRAP-->
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
+  <!--HANDLEBARS LIBRARY-->
+  <link rel="stylesheet" href="Project3.css">
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
-
-    <link rel="stylesheet" href="Project3.css">
-    <script src="Project3.js"> </script>
+  <script src="Project3.js"> </script>
 
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-        <a class="navbar-brand" href="#">CS Questionnaire</a>
-        <div id="timeBox">
-            <span class="toBold">Time Elapsed:</span><br>
-            <label id="minutes">00</label>:<label id="seconds">00</label>
-        </div>
-    </div>
-</nav>
 
-<div id="widget_view">
-</div>
+<body>
+  <div id="header">
+    <nav id="titleBox">
+      <div class="container">
+        <h1 class="toBold" id="headerText">CS Questionnaire</h1>
+      </div>
+    </nav>
+    <div id="timeBox">
+      <span class="toBold">Time Elapsed:</span><br>
+      <span id="minutes">00</span>:<span id="seconds">00</span>
+    </div>
+  </div>
+  <div id="widget_view" style="margin:50px">
+
+  </div>
 
 </body>
 
+<!--VIEWS-->
+
 <script id="intro_view" type="text/x-handlebars-template">
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span> Select quiz to start the app</span>
-                    <div class="buttons">
-                    <button class="btn btn-danger float-right" data-action="{{this.action}}">Quiz 1</button>
-                    <button class="btn btn-danger float-right" data-action="{{this.action2}}">Quiz 2</button>
-                    </div>
-                </div>
+      <div class="row">
+          <div class="col">
+            <div>
+               <div class="quizContainer">
+                <button class="btn btn-danger float-right" data-action="{{this.action}}">Quiz 1</button>
+                <button class="btn btn-danger float-right " data-action="{{this.action2}}">Quiz 2</button>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</script>
+      </div>
+  </script>
 
-<script id="question_view_true_false" type="text/x-handlebars-template">
+<script id="question_view_multiple_choice" type="text/x-handlebars-template">
     <div class="container">
-        <div class="counter">
-            <div class="col">
-                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span style="text-align:center"> {{this.questionText}}</span>
-                    <button class="btn btn-primary pull-left" data-action="answer" data-answer="{{this.options.[0]}}">{{this.options.[0]}}</button>
-                    <button class="btn btn-danger float-right" data-action="answer" data-answer="{{this.options.[1]}}">{{this.options.[1]}}</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
-
-<script id="question_view_text_input" type="text/x-handlebars-template">
-    <div class="container">
-        <div class="counter">
-            <div class="col">
-                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span style="text-align:center"> {{this.questionText}} </span>
-                    <input type="text" id="{{this.answerFieldId}}" name="answer"><br><br>
-                    <button class="btn btn-danger float-right" data-action="submit">Submit</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
-<script id="question_view_multiple" type="text/x-handlebars-template">
-<div class="container">
-    <div class="counter">
+      <div class="scoreRow">
         <div class="col">
             <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
+      </div>
+      <div class="row">
+          <div class="col">
             <div>
-                <span style="text-align:center"> {{this.questionText}}</span>
+              <span class="toBold" style="text-align:center">{{this.questionText}}</span><br>
+              <div class="leftAlignChoices">
                 <input type="radio" id="{{this.options.[0]}}" data-action="answer" data-answer="{{this.options.[0]}}" value="{{this.options.[0]}}" name="selection">{{this.options.[0]}}<br>
-                <input type="radio"id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="selection">{{this.options.[1]}}<br>
+                <input type="radio" id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="selection">{{this.options.[1]}}<br>
                 <input type="radio" id="{{this.options.[2]}}" data-action="answer" data-answer="{{this.options.[2]}}" value="{{this.options.[2]}}" name="selection">{{this.options.[2]}}<br>
                 <input type="radio" id="{{this.options.[3]}}" data-action="answer" data-answer="{{this.options.[3]}}" value="{{this.options.[3]}}" name="selection">{{this.options.[3]}}<br>
-               </div>
-            <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+              </div>
+              <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</script>
-<script id="question_view_multi_input" type="text/x-handlebars-template">
-    <div class="container">
-        <div class="scoreRow">
-            <div class="col">
-                <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span style="text-align:center">{{this.questionTextBefore}}</span>
-                    <input type="text" id="{{this.answerField1}}" name="answer">
-                    <span style="text-align:center">{{this.questionTextBetween}}</span>
-                    <input type="text" id="{{this.answerField2}}" name="answer">
-                    <span style="text-align:center">{{this.questionTextAfter}}</span><br>
+  </script>
 
-                    <button class="btn btn-danger float-right" data-action="submit">Submit</button>
-                </div>
-            </div>
+<script id="question_view_true_false" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="scoreRow">
+        <div class="col">
+          <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
         </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div>
+            <span class="toBold" style="text-align:center">{{this.questionText}}</span><br>
+            <div id="tfBtns">
+              <button class="btn btn-danger float-right" data-action="answer" data-answer="{{this.options.[0]}}">{{this.options.[0]}}</button>
+              <button class="btn btn-danger float-right" data-action="answer" data-answer="{{this.options.[1]}}">{{this.options.[1]}}</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</script>
+  </script>
+
+<script id="question_view_text_input" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="scoreRow">
+        <div class="col">
+          <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div>
+            <span class="toBold" style="text-align:center">{{this.questionText}}</span><br><br>
+            <input type="text" id="{{this.answerFieldId}}" name="answer"><br><br>
+            <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </script>
+
+<script id="question_view_multi" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="scoreRow">
+        <div class="col">
+          <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div>
+            <span class="toBold" style="text-align:center">{{this.questionTextBefore}}</span>
+            <input type="text" id="{{this.answerField1}}" name="answer">
+            <span class="toBold" style="text-align:center">{{this.questionTextBetween}}</span>
+            <input type="text" id="{{this.answerField2}}" name="answer">
+            <span class="toBold" style="text-align:center">{{this.questionTextAfter}}</span><br>
+
+            <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </script>
+
 <script id="question_view_check" type="text/x-handlebars-template">
     <div class="container">
-        <div class="scoreRow">
-            <div class="col">
-                <p>Questions Answered: <span id="questionsAnswered"></span> || Current Score: <span id="currentScore"></span>%</p>
-            </div>
+      <div class="scoreRow">
+        <div class="col">
+          <p>Questions Answered: <span id="AnsweredQuestions"></span> || Current Score: <span id="currentScore"></span>%</p>
         </div>
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span style="text-align:center">{{this.questionText}} </span><br>
-                    <div class="leftAlignChoices">
-                        <input type="checkbox" id="{{this.options.[0]}}" data-action="answer" data-answer="{{this.options.[0]}}" value="{{this.options.[0]}}" name="box">{{this.options.[0]}}<br>
-                        <input type="checkbox" id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="box">{{this.options.[1]}}<br>
-                        <input type="checkbox" id="{{this.options.[2]}}" data-action="answer" data-answer="{{this.options.[2]}}" value="{{this.options.[2]}}" name="box">{{this.options.[2]}}<br>
-                        <input type="checkbox" id="{{this.options.[3]}}" data-action="answer" data-answer="{{this.options.[3]}}" value="{{this.options.[3]}}" name="box">{{this.options.[3]}}<br>
-                    </div>
-                    <button class="btn btn-danger float-right" data-action="submit">Submit</button>
-                </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div>
+            <span class="toBold" style="text-align:center">{{this.questionText}} </span><br>
+            <div class="leftAlignChoices">
+              <input type="checkbox" id="{{this.options.[0]}}" data-action="answer" data-answer="{{this.options.[0]}}" value="{{this.options.[0]}}" name="box">{{this.options.[0]}}<br>
+              <input type="checkbox" id="{{this.options.[1]}}" data-action="answer" data-answer="{{this.options.[1]}}" value="{{this.options.[1]}}" name="box">{{this.options.[1]}}<br>
+              <input type="checkbox" id="{{this.options.[2]}}" data-action="answer" data-answer="{{this.options.[2]}}" value="{{this.options.[2]}}" name="box">{{this.options.[2]}}<br>
+              <input type="checkbox" id="{{this.options.[3]}}" data-action="answer" data-answer="{{this.options.[3]}}" value="{{this.options.[3]}}" name="box">{{this.options.[3]}}<br>
             </div>
+            <button class="btn btn-danger float-right" data-action="submit">Submit</button>
+          </div>
         </div>
+      </div>
     </div>
-</script>
-<script id="feedback_positive" type="text/x-handlebars-template">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span id="feedback_string">Great Job!</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
-
-<script id="feedback_negative" type="text/x-handlebars-template">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span id="feedback_string">Try Again Next Time</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
+  </script>
 
 <script id="end_view" type="text/x-handlebars-template">
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <div>
-                    <span> Thank you for taking the quiz</span>
-                     <span> Your Test Score was {{this.current_percentage}}</span>
-                    <div class="buttons">
-
-                        <button class="btn btn-danger float-right" data-action="start_again">Return to start</button>
-
-                    </div>
-
-                    <button class="btn btn-danger float-right" data-action="start_again">Start Again</button>
-                </div>
+      <div class="row">
+        <div class="col">
+          <div>
+          <span> Thank you for taking the quiz</span>
+           <span> Your Test Score was {{this.current_percentage}}</span>
+            
+            <div class="quizContainer">
+              
+               <button class="btn btn-danger float-right" data-action="start_again">Return to start</button>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</script>
-</html>
+  </script>
 
+<script id="feedback_positive" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="row">
+          <div class="col">
+            <div>
+              <span class="toBold" id="feedback_string">Great Job!</span>
+            </div>
+          </div>
+        </div>
+      </div>
+  </script>
+
+<script id="feedback_negative" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="row">
+          <div class="col">
+            <div>
+              <span class="toBold" id="feedback_string">Better Luck Next Time</span>
+            </div>
+          </div>
+        </div>
+      </div>
+  </script>
+
+
+
+</html>
